  on a specified number of cores.
* Added an argument, skip.check, for the control settings in both ICM and network
  model classes, which overrides the default error checking of parameters,
  initial conditions, and control settings. This should only be used for original
  models with new modules that may unnecessarily trigger a check error.
* In network models, two preset functions have been changed to replaceable
  modules: edges_correct and verbose.net. The former performs the adjustment to
  the edges coefficient for network models with population size changes, in order
  to preserve the mean degree; for mass action epidemic models, for example,
  one would not want this adjustment, so the module should be set to NULL in
  control.net. The latter performs the printing of simulation results to the
  console. Both functions are now listed in the modules help file accessed by:
  help(modules.net).
* Added progress bars for netdx diagnostic simulations for computationally
  intensive parts of the simulations.
* Network model estimation with netest now provides an output argument. When
  using the edges dissolution approximation (edapprox = TRUE), one may set output
  to "sim" to save a static simulation network instead of the ergm object as an
  element of the netest output. This is mainly for file size efficiency.

USER INTERFACE CHANGES
* The internal representation of disease status as an individual-level attribute
  in the stochastic ICM and network models has been changed from number (0, 1, 2)
  to character ("s", "i", "r"). This changes little when running the integrated
  models, and has greater implications for the API when editing modules. But one
  change for integrated models is that the status vector passed into the initial
  conditions functions must now be in this new format. This also impacts the
  expansion of EpiModel for original models.
* The zeromarg argument has been removed from plot.netsim for static network