@@ -1,6 +1,6 @@
 Package: EpiModel
-Version: 1.0.2.260
-Date: 2014-09-14
+Version: 1.0.2.261
+Date: 2014-09-17
 Title: Mathematical Modeling of Infectious Disease
 Description: Tools for simulating mathematical models of infectious disease.
     Epidemic model classes include deterministic compartmental models,
